# airbnb-clone-backend

./: pyproject.toml
config/: settings.py
rooms/: models.py
rooms/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
